objects/vlocity_cmt__SpecTemplateMapping__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>Spec Template Mapping globally unique identifier which is used across Salesforce orgs and potentially within other systems. Any globally unique identifier can be used when migrated from other initiating systems.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate the status of the mapping definition</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MappedObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the ObjectType whose attributes will be mapped to spec template attribute record</description>
        <label>Mapped Object Type</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Spec Template Mappings</relationshipLabel>
        <relationshipName>SpecTemplateMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TemplateProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents a template product imported from a technical, rating or billing engine catalog.</description>
        <inlineHelpText>Represents a template product imported from a technical, rating or billing engine catalog.</inlineHelpText>
        <label>Spec Template</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Spec Template Mappings (Spec Template)</relationshipLabel>
        <relationshipName>SpecTemplateMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Spec Template Mapping</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__MappedObjectTypeId__c</columns>
        <columns>vlocity_cmt__TemplateProductId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Spec Template Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spec Template Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>